# cryptography

./: Cargo.toml  README.md
src/: lib.rs  sha1.rs
tests/: sha1_tests.rs
